--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ theme_color: 546E7A
 # hydrogen-blog date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 hydrogen-blog:
-  date_format: "%m %-d, %Y"
+  date_format: "%b %d,%Y"
 
 #MathJax switch
 MathJax: false
